Add new component

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,9 +1,9 @@
 <section class="pro:h-[80vh] flex h-[100vh] justify-center md:h-[100vh]">
   <div
-    class="container flex flex-col bg-amber-800 px-[5vw] py-[5vh] xl:flex-row xl:items-center xl:justify-between"
+    class="container flex flex-col px-[5vw] py-[5vh] xl:flex-row xl:items-center xl:justify-between"
   >
     <div
-      class="main_left container flex flex-col gap-[6vh] bg-amber-400 xl:h-11/12 xl:w-7/12 xl:justify-start"
+      class="main_left container flex flex-col gap-[6vh] xl:h-11/12 xl:w-7/12 xl:justify-start"
     >
       <div
         class="for_text container flex max-w-full flex-col gap-[5vh] lg:items-center lg:gap-[10vh] xl:items-start xl:gap-[5vh]"
@@ -26,17 +26,17 @@
       </div>
 
       <div class="for_icons container flex max-w-full flex-col lg:gap-[3vh]">
-        <div class="input flex-center flex w-full max-w-full">
+        <div class="input flex-center flex w-full max-w-full xl:justify-start">
           <div
-            class="input_inner mt-7 flex h-10/12 w-full max-w-full justify-around rounded-2xl bg-white md:h-10/12 md:w-9/12 lg:h-12/12 xl:h-10/12 xl:w-full"
+            class="input_inner mt-7 flex h-10/12 w-full max-w-full justify-around rounded-2xl bg-white md:h-10/12 md:w-9/12 lg:h-12/12 xl:h-6/12 xl:w-8/12"
           >
             <input
               type="text"
               placeholder="Your business email"
-              class="ml-5 grow placeholder:opacity-50 focus:outline-0 md:text-lg lg:text-3xl"
+              class="ml-5 grow placeholder:opacity-50 focus:outline-0 md:text-lg lg:text-3xl xl:text-xl"
             />
             <button
-              class="bg-orangeMain flex-center flex gap-2 p-3 text-xs font-normal md:text-lg lg:text-3xl"
+              class="bg-orangeMain flex-center flex gap-2 p-3 text-xs font-normal md:text-lg lg:text-3xl xl:text-xl"
             >
               Get started
               <svg
@@ -56,9 +56,9 @@
             </button>
           </div>
         </div>
-        <div class="icon__row flex-center flex h-6/12 w-full">
+        <div class="icon__row flex-center flex h-6/12 w-full xl:justify-start">
           <div
-            class="flex h-10/12 w-10/12 items-center justify-between md:justify-around"
+            class="flex h-10/12 w-10/12 items-center justify-between md:justify-around xl:justify-start xl:gap-[5vw]"
           >
             <img src="fitbit.svg" alt="" class="h-15 md:h-20 lg:h-30" />
             <img src="tesla.svg" alt="" class="mt-2 h-15 md:h-20 lg:h-30" />
