--- a/src/app/hero2/hero2.component.html
+++ b/src/app/hero2/hero2.component.html
@@ -1,11 +1,97 @@
-<section class="flex h-[100dvh] w-full justify-center">
-  <div class="container px-[5vw] py-[5vh]">
-    <div class="card">
-      <div class="upper_text">
-        <div class="left flex-col"></div>
-        <div class="right"></div>
+<section
+  class="pro:h-[125dvh] flex h-[145dvh] w-full justify-center md:h-[110dvh] lg:h-[70dvh] xl:h-[80dvh]"
+>
+  <div class="xl:flex-center container px-[5vw] py-[5vh] xl:flex">
+    <div
+      class="card shadow-orangeLight h-auto rounded-3xl bg-white p-[2vh] shadow-sm lg:p-[3vh] xl:flex xl:flex-col xl:gap-[5vh] xl:p-[7vh]"
+    >
+      <div
+        class="upper_text xl:flex-center flex flex-col gap-[3vh] xl:flex-row xl:items-end-safe"
+      >
+        <div class="left flex flex-col gap-[2vh] xl:grow">
+          <p
+            class="text-blueMain font-semibold uppercase md:text-xl lg:text-2xl xl:text-lg"
+          >
+            Future Payments
+          </p>
+          <h1 class="title_text text-left font-medium">
+            Experience that grows with your scale.
+          </h1>
+        </div>
+        <div class="right flex xl:w-8/12 xl:pb-[1vh]">
+          <p class="pro:text-2xl md:text-3xl lg:text-4xl xl:text-2xl">
+            Design a financial operating system that works for your bussiness
+            and streamlined cash flow management.
+          </p>
+        </div>
       </div>
-      <div class="lower_text"></div>
+      <div
+        class="lower_text flex flex-col gap-[3vh] py-[5vh] md:gap-[2vh] lg:flex-row lg:py-[2vh]"
+      >
+        <div class="left flex flex-col gap-[2vh]">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#ff7601"
+            class="size-10 md:size-13 lg:size-15 xl:size-18"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 21v-8.25M15.75 21v-8.25M8.25 21v-8.25M3 9l9-6 9 6m-1.5 12V10.332A48.36 48.36 0 0 0 12 9.75c-2.551 0-5.056.2-7.5.582V21M3 21h18M12 6.75h.008v.008H12V6.75Z"
+            />
+          </svg>
+          <h5 class="font-medium">Multiple account</h5>
+          <p class="pro:te font-light">
+            Run your operations with cash from your accont and generate yield on
+            funds stored in your account.
+          </p>
+        </div>
+        <div class="middle flex flex-col gap-[2vh]">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#ff7601"
+            class="size-10 md:size-13 lg:size-15 xl:size-18"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M7.5 21 3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5"
+            />
+          </svg>
+          <h5 class="font-medium">Free transfers</h5>
+          <p class="font-light">
+            Create a financial experienceay and automate repeat purchases by
+            scheduling recurring payments.
+          </p>
+        </div>
+        <div class="right flex flex-col gap-[2vh]">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#ff7601"
+            class="size-10 md:size-13 lg:size-15 xl:size-18"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
+            />
+          </svg>
+          <h5 class="font-medium">Unmatched security</h5>
+          <p class="font-light">
+            Securely manage your finances with organization-wide MFA,
+            card-locking, and account-level controls.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
