--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar class="sticky top-0"></app-navbar>
 <app-hero></app-hero>
 <app-hero2></app-hero2>
+<app-benefits></app-benefits>
 <router-outlet />
