Steps section done

--- a/src/app/benefits/benefits.component.html
+++ b/src/app/benefits/benefits.component.html
@@ -1,5 +1,5 @@
 <section
-  class="pro:h-[135dvh] flex h-[155dvh] w-full justify-center xl:h-[115dvh]"
+  class="pro:h-[155dvh] flex h-[185dvh] w-full justify-center md:h-[115dvh]"
 >
   <div class="container flex flex-col gap-[5vh] px-[5vw] py-[5vh]">
     <div class="title flex-center flex w-full flex-col gap-[3vh]">
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div
-        class="card_3 shadow-orangeLight relative flex h-[50vh] grow flex-col justify-around gap-[4vh] rounded-3xl bg-white p-[4vh] shadow-sm xl:flex-row xl:p-0 xl:px-[4vh] xl:pt-[4vh]"
+        class="card_3 shadow-orangeLight relative z-[-10] flex h-[50vh] grow flex-col justify-around gap-[4vh] rounded-3xl bg-white p-[4vh] shadow-sm xl:flex-row xl:p-0 xl:px-[4vh] xl:pt-[4vh]"
       >
         <div
           class="left flex flex-col items-start justify-center gap-[2vh] p-[1vh] xl:w-4/12"
