--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-hero2></app-hero2>
 <app-benefits></app-benefits>
 <app-steps></app-steps>
+<app-our-mission></app-our-mission>
 <router-outlet />
