Final section is done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-benefits></app-benefits>
 <app-steps></app-steps>
 <app-our-mission></app-our-mission>
+<app-final></app-final>
 <router-outlet />
