--- a/src/app/our-mission/our-mission.component.html
+++ b/src/app/our-mission/our-mission.component.html
@@ -6,7 +6,7 @@
       <p
         class="text-blueMain font-semibold uppercase md:text-xl lg:text-2xl xl:text-lg"
       >
-        Steps
+        our mission
       </p>
       <h1 class="title_text text-center font-medium md:w-9/12 xl:w-5/12">
         We'he helped innovative companies
