--- a/src/app/final/final.component.html
+++ b/src/app/final/final.component.html
@@ -15,8 +15,8 @@
           Ready to level up your payment process?
         </h1>
         <p class="text-left font-light text-gray-400 lg:w-8/12 xl:w-8/12">
-          Hundreds of all sizes and across all industries have made a big
-          improvements with us.
+          Supports small businesses with simple invoicing, powerful
+          integrations, and cash flow management tools.
         </p>
       </div>
       <div
