--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,6 @@
     @apply pro:text-xl md:text-3xl;
   }
   a {
-    @apply font-main text-lg/7 font-light text-slate-900 md:text-xl/7 lg:text-2xl/7;
+    @apply font-main text-lg font-light text-slate-900 md:text-xl lg:text-2xl;
   }
 }
